styles/style.css
/* место для вашего кода */

/* Header */

.header {
  display: grid;
  padding: 0 50px;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  font-size: 18px;
  height: 293px;
}

.header__links-list {
  display: flex;
  list-style: circle;
  gap: 24px;
  flex-wrap: nowrap;
}

.header__links-list-item_no-bullit {
  list-style: none;
}

.header__link_active {
  text-decoration: underline;
}

.header__logo {
  width: 148px;
  height: 105px;
}

.header__logo-image {
  width: 100%;
  height: 100%;
}

.address {
  display: flex;
  flex-direction: column;
  font-style: normal;
  gap: 1px;
  margin-top: 92px;
}

.header__address {
  justify-self: end;
  margin-bottom: 100px;
}

.address_number {
  text-decoration: underline;
}

.address_email {
  text-decoration: underline;
}

/* Cover */

.cover {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: relative;
  background-image: url(/images/cover.jpg);
  background-size: cover;
  z-index: 0;
  color: white;
  height: 757px;
  padding: 0 50px 50px;
  margin-bottom: 180px;
}

.cover__title {
  font-size: 100px;
  margin-top: 165px;
  letter-spacing: 30px;
  line-height: 115px;
}

.cover_line {
  display: block;
}

.aligned-text {
  text-align: start;
}

.aligned-text_center {
  text-align: center;
}

.aligned-text_right {
  text-align: end;
}

.cover__description {
  display: flex;
  align-items: center;
}

.cover__description-text {
  word-spacing: 25px;
  text-transform: uppercase;
  margin-right: auto;
  font-weight: normal;
  font-size: 22px;
}

.bet-button {
  background-color: rgb(255 255 255 / 0);
  border: 1px solid white;
  color: white;
  padding: 11px 31px;
  text-transform: uppercase;
  font-size: 22px;
}

.overlay {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  background-color: rgb(0 0 0 / 0.5);
}

/* Lots */

.lots {
  margin: 0px 24px 120px;
}

.lots__heading {
  margin-left: 40px;
  font-size: 40px;
}

.lots__card-list {
  display: flex;
  justify-content: space-between;
  margin: 30px 0px;
}

.lots__card-list-item {
  width: 334px;
  min-height: 596px;
  list-style: none;
}

.card-link {
  height: 100%;
}

.card {
  display: flex;
  flex-direction: column;
  height: 100%;
  padding: 48px 40px;
  justify-content: space-between;
  position: relative;
  z-index: 0;
  color: white;
}

.card__title {
  text-transform: uppercase;
  text-decoration: underline;
  font-size: 22px;
  font-style: bold;
}

.card__text {
  font-size: 20px;
}

.card_type_film {
  background-image: url(/images/card-lot-01.jpg);
}

.card_type_book {
  background-image: url(/images/card-lot-02.jpg);
}

.card_type_picture {
  background-image: url(/images/card-lot-03.jpg);
}

.lots__look-more-link {
  margin-left: 40px;
  text-decoration: underline;
  font-size: 20px;
}

/* About */

.about {
  display: grid;
  grid-template-columns: min-content 1fr;
  margin: 0 24px 180px;
  justify-items: center;
  gap: 72px;
}

.about__logo {
  display: flex;
  width: 240px;
  height: 240px;
  background-color: black;
  border-radius: 50%;
  margin-left: 47px;
  margin-top: 35px;
}

.about__logo-image {
  margin: auto;
  width: 148px;
  height: 114px;
}

.about__title {
  margin: 133px 0 100px;
}

.about__text {
  font-size: 20px;
}

.about__text_1 {
  margin-bottom: 24px;
  margin-right: 5px;
}

/* Gooter */

.footer {
  display: grid;
  padding: 0 50px;
  grid-template-columns: repeat(3, 1fr);
  justify-content: space-between;
  font-size: 18px;
}

.footer__address {
  justify-self: start;
  margin-bottom: 82px;
}

.footer__menu-list {
  text-align: center;
  list-style: none;
}

.footer__menu-link_active {
  text-decoration: underline;
}

.footer__social-list {
  display: flex;
  gap: 48px;
  list-style: none;
  justify-self: end;
}

.footer__social-icon {
  width: 48px;
  height: 48px;
}

